@@ -11,6 +11,7 @@
 // WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 // See the License for the specific language governing permissions and
 // limitations under the License.
+using System.Threading;
 
 namespace Castle.MicroKernel.Tests.Registration
 {
@@ -250,6 +251,20 @@ namespace Castle.MicroKernel.Tests.Registration
 
 			handlers = kernel.GetAssignableHandlers(typeof(DefaultSpamServiceWithConstructor));
 			Assert.AreEqual(1, handlers.Length);		
+		}
+
+
+		[Test]
+		public void RegisterAssemblyTypes_WhereConditionSatisifed_RegisteredInContainer()
+		{
+			kernel.Register(
+				AllTypes.FromAssembly(Assembly.GetExecutingAssembly())
+					.Where(t => t.Name == "CustomerImpl")
+					.WithService.FirstInterface()
+					);
+
+			IHandler[] handlers = kernel.GetHandlers(typeof(ICustomer));
+			Assert.AreEqual(1, handlers.Length);
 		}
 #endif	
 
